--- a/src/Cars.css
+++ b/src/Cars.css
@@ -1,14 +1,20 @@
 body{
-    background-image: linear-gradient(to right, rgb(210, 76, 183),rgb(134, 134, 247));
+    background-image: linear-gradient(to right,rgb(115, 115, 115),lightgrey);
 }
 h1{
     color:brown;
 }
 .con1{
     display: flex;
-    justify-content: space-around;
-    margin-top: 10%;
-    min-height: 100%;
+    margin-top: 5%;
+    margin-left: 5%;
+    flex-wrap: wrap;
+    column-gap: 70px;
+    row-gap: 70px;
+}
+.ru{
+    text-decoration: none;
+    color: rgb(186, 186, 186);
 }
 .con2{
     padding:10px;
@@ -17,9 +23,30 @@ h1{
     border-radius: 20px;
     filter: drop-shadow(10px 10px 10px black);
     display: flex;
-    align-items:flex-end;
-    justify-content: center;
+    flex-wrap: wrap;
     background-image: url(C:\Users\Dell\Downloads\bugatti.jpg);
+    background-size: cover;
+}
+.con3{
+    padding:10px;
+    height: 250px;
+    width: 240px;
+    border-radius: 20px;
+    filter: drop-shadow(10px 10px 10px black);
+    display: flex;
+    flex-wrap: wrap;
+    background-image: url(C:\Users\Dell\Downloads\nissan.jpeg);
+    background-size: cover;
+}
+.con4{
+    padding:10px;
+    height: 250px;
+    width: 240px;
+    border-radius: 20px;
+    filter: drop-shadow(10px 10px 10px black);
+    display: flex;
+    flex-wrap: wrap;
+    background-image: url(C:\Users\Dell\Downloads\thar.jpeg);
     background-size: cover;
 }
 .lin{
@@ -30,24 +57,33 @@ h1{
     justify-content: space-between;
     align-items: center;
     border-radius: 2px;
-    
+    grid-template-columns: 60% 50%;
 }
 .lin1{
-    padding-left: 20px;
-    width: 70%;
+    width: 60%;
     display: flex;
     align-items: flex-start;
+    padding-left: 70px;
 }
 .lin2{
+    padding-right: 20px;
+    width: 40%;
     display: flex;
-    width: 30%;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
-.lin button{
+.lin1 button{
     height: 40px;
     width: 100px;
     background-color: rgb(54, 51, 51);
+    color:white;
+    border-radius: 5px;
+}
+.lin2 button{
+    height: 40px;
+    width: 100px;
+    background-color: rgb(54, 51, 51);
+    border-radius: 5px;
     color:white;
 }
 .lin button:hover{
@@ -58,16 +94,48 @@ h1{
 }
 .mat{
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 65% 30%;
     column-gap: 20px;
     padding: 50px 30px 10px 20px;
 }
+.left .h1{
+    font-family: 'Nunito Sans';
+}
 .left{
-    background-color: red;
+    font-size: 30px;
+    padding: 50px;
+    animation-name: example2;
+    animation-duration: 2s;
+}
+@keyframes example2{
+    from {transform: translateX(-800px);}
+    to {transform: translateX(0px);}
+
 }
 .right{
     height: 450px;
     border-radius: 5px;
+    filter: drop-shadow(30px 30px 30px black);
     background-image: url(C:\Users\Dell\Downloads\car3.jpeg);
     background-size: cover;
+    animation-name: example1;
+    animation-duration: 2s;
+}
+@keyframes example1{
+    from {transform: translateX(600px);}
+    to {transform: translateX(0px);}
+
+}
+.abt{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cnt{
+    display: grid;
+    justify-content: center;
+    height: 100%;
+    width: 500px;
+    border: 3px solid;
+    align-items: center;
 }
